css/index.css
/* ... */
html.phon.land #app.sidenav_open #sidenav,
html.tabl #app.sidenav_open #sidenav {
	-webkit-transform: translateX(-234px);
	-moz-transform: translateX(-234px);
	-ms-transform: translateX(-234px);
	-o-transform: translateX(-234px);
	transform: translateX(-234px);
}

#app.sidenav_open #closeSidenav {
	pointer-events: auto;
}

#sidenav .navButtons .navlink,
#sidenav .text {
	max-width: 290px;
	padding: 16px 20px;
}

#sidenav .text {
	background-color: lightgray;
	background-color: rgba(0,0,0,0.03);
}

.dark-theme #sidenav .text {
	background-color: #333;
	background-color: rgba(255,255,255,0.04);
}

#sidenav .right button,
#sidenav button.right{
	position: relative;
	top: -16px;
}

#sidenav .dropdown.right {
	top: 36px;
}

.navlinkIndicator {
	background-color: #478cdb; /*accent blue*/
}

#topIndicator {
	position: relative;
	height: 3px;
	top: 50px;
	will-change: right, width;
	-webkit-transition: all cubic-bezier(0.8, 0, 0.2, 1) 0.2s;
	-moz-transition: all cubic-bezier(0.8, 0, 0.2, 1) 0.2s;
	-o-transition: all cubic-bezier(0.8, 0, 0.2, 1) 0.2s;
	transition: all cubic-bezier(0.8, 0, 0.2, 1) 0.2s;
}

#sideIndicator {
	position: absolute;
	width: 3px;
	height: 54px;
	will-change: top;
	-webkit-transition: top linear 0.2s;
	-moz-transition: top linear 0.2s;
	-o-transition: top linear 0.2s;
	transition: top linear 0.2s;
}
#stoKeyInput,
#stoKeyInputConfirm {
	background-color: white;
	width: 100%;
}

.alert {
	color: red;
}

#sidenav label {
	font-size: 13px;
	float: left;
}

#sidenav button {
	height: 40px;
	min-width: 40px;
	padding: 10px;
	margin: 8px 0;
	border: 1px solid lightgray;
	font-size: 15px;
}

#copy {
	position: relative;
	bottom: 0;
	right: 0;
	text-align: right;
	color: #bbb;
}

.dark-theme #copy {
	color: #555;
}

#router-views{
	width: 200%;
	height: 100%;
}

.views{
	width: 100%;
	height: 100%;
}

.view {
	width: 51%;
	padding-right: 1%;
	height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
	float: left;
	will-change: width, opacity, transform;
	scrollbar-width: none;
}

.scroll-outer-container{
	height: 100%;
}

html.phon .view,
html.tabl .view{
	width: 60%; /*hide scrollbars hack*/
	padding-right: 9%;
}

.view-container {
	width: 100%;
	padding: 8px 16px 8px 16px;
	margin-left: auto;
	margin-right: auto;
}

html.phon .view-container,
html.tabl .view-container {
	padding-left: 8px;
	padding-right: 20px;
}

.splitViewLeft {
	display: none;
}

html.desk .splitViewLeft {
	display: block;
	float: left;
	width: 18%;
	transition: width cubic-bezier(0.1, 0.9, 0.2, 1) 0.3s;
}

html.desk .splitViewRight {
	width: 37%;
	padding-right: 4%;
	position: relative;
	right: 25px;
	border-left: 2px solid lightgray;
}

html.desk .dark-theme .splitViewRight {
	border-left: 2px solid #333;
}

html.phon .searchBar_open #back,
html.phon .searchBar_open #currentView,
.searchBar_open #menu,
html.tabl .searchBar_open .navButtons.tabl.desk {
	display: none;
}

#searchBar {
	position: relative;
	margin: 8px 0;
	min-height: 38px;
	overflow: hidden;
	width: 0;
	will-change: width;
	-webkit-transition: none;
	-moz-transition: none;
	-o-transition: none;
	transition: none;
	background-color: #fafafa;
}

html.phon #searchBar {
	position: absolute;
	left: 400px;
	right: 114px;
	will-change: left;
	-webkit-transition: left 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
	-moz-transition: left 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
	-o-transition: left 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
	transition: left 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
}

.searchBar_open #searchBar,
html.tabl #searchSuggestions-container,
html.desk #searchSuggestions-container {
	width: 300px;
}

.searchBar_open #searchBar {
	-webkit-transition: width 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
	-moz-transition: width 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
	-o-transition: width 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
	transition: width 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
}

.searchBar_closing #searchBar {
	-webkit-transition: width 0.15s cubic-bezier(0.1, 0.9, 0.2, 1);
	-moz-transition: width 0.15s cubic-bezier(0.1, 0.9, 0.2, 1);
	-o-transition: width 0.15s cubic-bezier(0.1, 0.9, 0.2, 1);
	transition: width 0.15s cubic-bezier(0.1, 0.9, 0.2, 1);
}
html.phon .searchBar_open #searchBar {
	width: auto;
	left: 8px;
}

#searchBox {
	width: 100%;
	z-index: 35;
	background-color: transparent;
}

#searchBox,
#stoKeyInput,
#stoKeyInputConfirm {
	height: 38px;
	border: 1px solid lightgray;
}

#searchBox,
#searchAutoComplete {
	text-transform: lowercase;
	text-indent: 15px;
}

html.phon #searchBox,
html.phon #searchAutoComplete {
	text-indent: 7px;
}

html.desk #searchBox,
html.desk #searchBar {
	position: relative;
	right: 0;
}

.dark-theme #searchBox,
.dark-theme #stoKeyInput,
.dark-theme #stoKeyInputConfirm,
.dark-theme #sidenav button {
	border-color: #444;
}

#searchAutoComplete {
	position: absolute;
	top: 8.5px;
	left: 2px;
	z-index: 30;
}

html.tabl .dark-theme #search:before,
html.phon .dark-theme #search:before {
	width: 1px;
	height: 52px;
	content: "";
	position: absolute;
	right: 56px;
	top: 0;
}
/*implimented own clear text x so remove default x*/
input[type=text]::-ms-clear {
	display: none;
	width: 0;
	height: 0;
}

input[type=text]::-ms-reveal {
	display: none;
	width: 0;
	height: 0;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
	display: none;
}

#searchReset {
	position: absolute;
	right: 0;
	top: 0;
	height: 38px;
	background: none;
	border: none;
	width: 40px;
	z-index: 40;
}

html.desk .searchBar_open #searchReset {
	display: block;
}

#searchSuggestions-container,
#searchSuggestions,
.dropdown {
	list-style: none;
	margin: 0;
	padding: 0;
	text-indent: 0;
	text-align: left;
	overflow-y: auto;
	overflow-x: hidden;
}

html.desk #searchSuggestions-container,
html.tabl #searchSuggestions-container {
	position: static;
	max-height: 300px;
	z-index: 30;

}
/* ... */

